fix bug with routing

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,4 @@ block content
     h4= item.user 
     li= item.text 
     br
-  a(href="http://localhost:3000/new") new message
+  a(href="/new") new message
